--- a/views/package.json
+++ b/views/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "villain",
+  "name": "tuhao",
   "version": "1.0.0",
-  "description": "no",
-  "main": "Gruntfile.js",
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "autoprefixer": "^6.0.3",
-    "grunt": "^0.4.5",
-    "grunt-browser-sync": "^2.1.3",
-    "grunt-contrib-copy": "^0.8.1",
-    "grunt-contrib-cssmin": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "jit-grunt": "^0.9.1",
-    "postcss": "^5.0.9",
-    "time-grunt": "^1.2.1"
+  "description": "detect the relationship between you and others tuhao",
+  "engines": {
+    "node": ">=0.12.0"
   },
   "devDependencies": {
-    "grunt-postcss": "^0.6.0"
+    "babel-preset-es2015": "^6.1.18",
+    "browser-sync": "^2.2.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-babel": "^6.1.1",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-minify-html": "^1.0.0",
+    "gulp-size": "^1.2.1",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-uglify": "^1.1.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "villain",
-  "license": "ISC"
+  "author": "Jimmy_THR",
+  "license": "ISC",
+  "dependencies": {
+    "autoprefixer": "^6.1.0",
+    "babel-preset-es2015": "^6.1.18",
+    "gulp-babel": "^6.1.1",
+    "gulp-postcss": "^6.0.1",
+    "gulp-rename": "^1.2.2",
+    "postcss-flexboxfixer": "0.0.3"
+  }
 }
