--- a/views/bower.json
+++ b/views/bower.json
@@ -15,6 +15,7 @@
     "blueimp-file-upload": "blueimp/jQuery-File-Upload#~9.11.2",
     "jquery": "~2.1.4",
     "requirejs": "~2.1.20",
-    "zepto": "madrobby/zepto#~1.1.6"
+    "zepto": "madrobby/zepto#~1.1.6",
+    "plupload": "moxiecode/plupload#~2.1.8"
   }
 }
