--- a/views/bower.json
+++ b/views/bower.json
@@ -16,6 +16,7 @@
     "jquery": "~2.1.4",
     "requirejs": "~2.1.20",
     "zepto": "madrobby/zepto#~1.1.6",
-    "plupload": "moxiecode/plupload#~2.1.8"
+    "plupload": "moxiecode/plupload#~2.1.8",
+    "SparkMD5": "satazor/SparkMD5#~2.0.0"
   }
 }
